src/snapshots/writ__workspace__tests__dir_1.snap
---
source: src/workspace.rs
expression: files

---
[
    "dir_1/c",
    "dir_1/d",
    "dir_1/dir_a/e",
]
