src/snapshots/writ__workspace__tests__dot.snap
---
source: src/workspace.rs
expression: files

---
[
    "a",
    "b",
    "dir_1/c",
    "dir_1/d",
    "dir_1/dir_a/e",
]
